update no partial

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,3 +7,11 @@ main
     background-color: maroon; 
     color: white;
 }
+.removeAuthor
+{
+    color : white; 
+}
+.filler
+{
+    color: blue;
+}
