--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
     }); //END DOCUMENT READY
 </script>
 
-<h1> Admin Login Screen</h1>
+<h1> Login Screen</h1>
 
     Username: <input type="text" id="username" name="username"/>       <br>
     Password: <input type="password" id="password" name="password"/>   <br>
