--- a/views/newAuthor.ejs
+++ b/views/newAuthor.ejs
@@ -21,9 +21,10 @@
             Last  name: <input type="text" name="lastName"><br>    
             Gender: <input type="radio" name="gender" value="F">Female
                     <input type="radio" name="gender" value="M">Male
-            DOB: <br></br>
-            DOD: </br>
-            Biography: <textarea name="biography" cols="200" height="20"></textarea>
+            DOB: <input type="text" name="DOB"><br></br>
+            DOD: <input type="text" name="DOD"> </br>
+            Biography: <textarea name="biography" cols="200" height="20"></textarea><br>
+            Picture URL: <input type="text" name="picURL"><br>
             <!--TODO: Add the remaining fields -->
             <br><br>
             <button>Add Author</button>
