--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -57,4 +57,6 @@
             
             <%= author.firstName %> <%= author.lastName %> <br>
         <% }) %>
+        
+         <button id=logoutButton> CLICK TO <strong>LOGOUT!</strong> </button> 
 </html>
